# HorribleChallenges

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  is_space_bench.cc
src/01_type_list/: 01_type_list.cc  CMakeLists.txt  challenge.md
src/02_expr_eval/: 02_expr_eval.cc  CMakeLists.txt  challenge.md
src/03_pattern_match/: 03_pattern_match.cc  CMakeLists.txt  challenge.md
src/04_json_validator/: 04_json_validator.cc  CMakeLists.txt  challenge.md
src/05_lambda_calc/: 05_lambda_calc.cc  CMakeLists.txt  challenge.md
src/06_nn_params/: 06_nn_params.cc  CMakeLists.txt  challenge.md
src/07_type_query/: 07_type_query.cc  CMakeLists.txt  challenge.md
src/08_type_tree/: 08_type_tree.cc  CMakeLists.txt  challenge.md
src/09_metafunc_compiler/: 09_metafunc_compiler.cc  CMakeLists.txt  challenge.md
src/10_reflection_system/: 10_reflection_system.cc  CMakeLists.txt  challenge.md
src/11_byte_pair_encoding/: CMakeLists.txt  challenge.md
src/utils/: CMakeLists.txt
src/utils/include/: CMakeLists.txt  horribleJSON.hpp  horribleutils.hpp
src/utils/test/: CMakeLists.txt  horribleJSON_test.cc  horribleutils_test.cc
tests/: CMakeLists.txt
tests/01_type_list/: test_type_list.cc
tools/: visualizations.py
tools/report/: is_space_summary.csv
